--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/estilos.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <title>Formulario</title>
 </head>
@@ -61,9 +62,9 @@
             <div>
                 <i class="fas fa-money-bill-alt icon"></i><br>
                 <form action="#">
-                    <input class="with-gap validar" name="group1" type="radio" id="option"/>
+                    <input class="with-gap validar" name="group1" type="radio" id="option" />
                     <span>Efectivo</span><br>
-                    <input class="with-gap validar" name="group1" type="radio" id="option"/>
+                    <input class="with-gap validar" name="group1" type="radio" id="option" />
                     <span>Credito</span><br>
                 </form>
                 <label for="option"><span class="error">*Campo Obligatorio</span></label>
@@ -72,9 +73,14 @@
                 <input class="validar" type="checkbox" value="option1" id="caja">
                 <a href="">Acepto terminos y condiciones</a>
             </div>
+            <p>
+                <label id="labelEnviar"></label>
+                <button type="submit"><i class="fas fa-save"></i>Enviar</i></button>
+            </p>
         </form>
     </div>
 
+    <script src="js/funciones.js"></script>
 </body>
 
 </html>
