--- a/form2.html
+++ b/form2.html
@@ -19,13 +19,11 @@
             </p>
             <p class="correo">
                     <label for="Nombre">Ingrese su Correo Electronico:</label>
-                <input type="email" class="input" placeholder="Correo Electronico" id="mail" name="mail" onblur="revisar(this); revisaMail(this)"
-                    autocomplete="off">
+                <input type="email" class="input" placeholder="Correo Electronico" id="mail" name="mail" onblur="revisar(this); revisaMail(this)" autocomplete="off">
             </p>
             <p class="password">
                     <label for="Nombre">Ingrese un Contraseña:</label>
-                <input type="password" class="input" placeholder="Contraseña" id="password" name="password"
-                    onblur="revisar(this);  revisaNumero(this); revisaLongintud(this, 10)" autocomplete="off">
+                <input type="password" class="input" placeholder="Contraseña" id="password" name="password" onblur="revisar(this); revisaPass(this)" autocomplete="off">
             </p>
             <p class="fecha">
                 <label for="cumpleaños">Selecione la fecha de su cumpleaños</label><br>
