--- a/app.html
+++ b/app.html
@@ -7,6 +7,18 @@
     <title>App Money</title>
 </head>
 <body>
-    
+    <div class="container">
+        <h1>Conversor</h1>
+        <label for="monto">Cantidad a converti:</label>
+        <input type="text" name="monto" id="monto" placeholder="ingrese el valor del dinero">
+        <label for="valor"></label>
+        <select name="moneda" id="tipoMoneda">
+                <option value="Dolar">Dolares</option>
+                <option value="Euro">Euros</option>
+        </select><br>
+        <label for="valor">Cantida convertida a pesos Col ($)</label>
+        <input type="" name="valor" id="valor" placeholder="Cantidad convertida">
+    </div>
+    <script src="js/funcionalidadco.js"></script>
 </body>
 </html>
