--- a/form2.html
+++ b/form2.html
@@ -27,7 +27,7 @@
             </p>
             <p class="fecha">
                 <label for="cumpleaños">Selecione la fecha de su cumpleaños</label><br>
-                <input type="date" name="cumpleaños" id="cumpleaños">
+                <input type="date" name="cumpleaños" id="cumpleaños" onblur="validarFecha(this)">
             </p>
             <p class="interes">
                 <label for="">Selecione temas de su interes:</label><br>
