--- a/form2.html
+++ b/form2.html
@@ -37,7 +37,7 @@
                 <input type="checkbox" name="opcion" id="interes" onblur="">Juegos<br>
             </p class="condiciones">
                 <label for="condiciones">Acepta los terminos y condiciones:</label>
-                <input type="checkbox" name="condiciones" id="condiciones">
+                <input type="checkbox" name="condiciones" id="condiciones" onblur="revisarCheck(this)">
             </p>
             <div class="enviar">
                 <button type="submit" id="enviar">Registrarse</button>
