--- a/index.html
+++ b/index.html
@@ -1,23 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Login</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/estiloslogin.css">
 </head>
+
 <body>
-    <h1>Ingresar</h1>
-    <div id="container">
-        <form action="" method="post">
-            <label for="usuario">Ingrese su Usuario:</label><br>
-            <input type="text" name="usuario" id="usuario">
-            <label for="password">Ingrese su Contraseña:</label><br>
-            <input type="password" name="password" id="password">
-        </form>
-        <button type="submit"><a href="app.html">Login</a></button>
-        <button type="submit"><a href="form2.html">Registrar</a></button>
+    <div class="container">
+        <div id="back">
+            <h1>Ingresar</h1>
+            <form action="" method="post">
+                <div class="form-group">
+                    <label for="name">Usuario</label>
+                    <input type="text" class="form-control" name="" id="name" aria-describedby="helpId"
+                        placeholder="Ingrese su nombre de usuario">
+                </div>
+                <div class="form-group">
+                    <label for="password">Contraseña</label>
+                    <input type="password" class="form-control" name="" id="" aria-describedby="helpId"
+                        placeholder="Ingrese su contraseña">
+                </div>
+                <button class="btn btn-outline-primary btn-lg btn-block" type="submit">Ingresar</button>
+                <button class="btn btn-secondary btn-lg btn-block" type="submit">Registrarse</button>
+            </form>
+
+        </div>
     </div>
+
+    <script src="js/jquery.js"></script>
+    <script src="js/popper.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 </body>
+
 </html>
