--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         placeholder="Ingrese su contraseña">
                 </div>
                 <button class="btn btn-outline-primary btn-lg btn-block" type="submit">Ingresar</button>
-                <button class="btn btn-secondary btn-lg btn-block" type="submit">Registrarse</button>
+                <a class="btn btn-secondary btn-lg btn-block" href="form2.html" role="button">Registrarse</a>
             </form>
 
         </div>
