--- a/app.html
+++ b/app.html
@@ -15,14 +15,14 @@
         <div id="back">
             <h1>Conversor</h1>
             <label for="monto">Cantidad a converti:</label>
-            <input type="text" name="monto" id="monto" placeholder="ingrese el valor del dinero">
+            <input type="text" name="monto" id="monto" placeholder=" Ingrese el valor del dinero">
             <label for="valor"></label>
             <select name="moneda" id="tipoMoneda">
                 <option value="Dolar">Dolares</option>
                 <option value="Euro">Euros</option>
             </select><br>
             <label for="valor">Cantida convertida a pesos Col ($)</label>
-            <input type="" name="valor" id="valor" placeholder="Cantidad convertida">
+            <input type="" name="valor" id="valor" placeholder=" Cantidad convertida">
         </div>
     </div>
     <script src="js/jquery.js"></script>
