--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
                 <div class="form-group">
                     <label for="name">Usuario</label>
                     <input type="text" class="form-control" name="" id="name" aria-describedby="helpId"
-                        placeholder="Ingrese su nombre de usuario">
+                        placeholder="Ingrese su nombre de usuario" onblur="validar(this)">
                 </div>
                 <div class="form-group">
                     <label for="password">Contraseña</label>
                     <input type="password" class="form-control" name="" id="" aria-describedby="helpId"
-                        placeholder="Ingrese su contraseña">
+                        placeholder="Ingrese su contraseña" onblur="validar(this)">
                 </div>
                 <button class="btn btn-outline-primary btn-lg btn-block" type="submit">Ingresar</button>
                 <a class="btn btn-secondary btn-lg btn-block" href="form2.html" role="button">Registrarse</a>
